test/negative/t27.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : x:('a -> 'b -> 'c) -> y:'a -> 'b -> 'c[@@gospel
                                                 [b:integer],[a:'a] = f ~x [w:int] ~y [p:integer] z ]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : x:('a -> 'b -> 'c) -> y:'a -> 'b -> 'c
(*@ [b : TY], [a : TY] = f ~x [w : TY] ~y [p : TY] z
     *)
File "t27.mli", line 12, characters 25-26:
Error: Type checking error: too few parameters
